@@ -1,0 +1,6 @@
+# This is the help/output level Makefile for gramps
+# $Id$
+
+html: /bin/true && "This is a placeholder"
+
+pdf: /bin/true && "This is a placeholder"
