@@ -1,58 +1,0 @@
-<?xml version="1.0"?>
-
-<fop version="1.0">
-
-  <!-- Source resolution in dpi (dots/pixels per inch) for 
-     determining the size of pixels in SVG and bitmap images, 
-     default: 72dpi -->
-  <source-resolution>72</source-resolution>
-  <!-- Target resolution in dpi (dots/pixels per inch) for 
-     specifying the target resolution for generated bitmaps, 
-     default: 72dpi -->
-  <target-resolution>72</target-resolution>
- 
-  <renderers>
-    <renderer mime="application/pdf">
-       <fonts>
-        <!-- embedded fonts -->
-        <!--
-        This information must exactly match the font specified
-        in the fo file. Otherwise it will use a default font.
-        -->
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeSerif.xml"
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeSerif.ttf">
-          <font-triplet name="FreeSerif" style="normal" weight="normal"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeSerifBold.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeSerifBold.ttf">
-          <font-triplet name="FreeSerif" style="normal" weight="bold"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeSerifItalic.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeSerifItalic.ttf">
-          <font-triplet name="FreeSerif" style="italic" weight="normal"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeSerifBoldItalic.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeSerifBoldItalic.ttf">
-          <font-triplet name="FreeSerif" style="italic" weight="bold"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeMono.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeMono.ttf">
-          <font-triplet name="FreeMono" style="normal" weight="normal"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeMonoBold.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeMonoBold.ttf">
-          <font-triplet name="FreeMono" style="normal" weight="bold"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeMonoOblique.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeMonoOblique.ttf">
-          <font-triplet name="FreeMono" style="italic" weight="normal"/>
-        </font>
-        <font metrics-url="file:///home/benny/programms/gramps/gramps2/data/help/FreeMonoBoldOblique.xml" 
-          kerning="yes" embed-url="file:///usr/share/fonts/truetype/freefont/FreeMonoBoldOblique.ttf">
-          <font-triplet name="FreeMono" style="italic" weight="bold"/>
-        </font>
-      </fonts>
-    </renderer>
-  </renderers>
-
-</fop>
