@@ -1,3 +1,7 @@
+2007-02-16  Alex Roitman  <shura@gramps-project.org>
+	* configure.in: Add HELPPATH and FONTPATH substitutions, generate
+	new files in help/output.
+
 2007-02-14  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/HtmlDoc.py: fix html template loading.
 	* src/ReportBase/_ReportDialog.py: fix html template loading.
